kubernetes/test-mbookmytrip/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mbookmytrip
  namespace: test-mbookmytrip
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
    type: RollingUpdate
  selector:
    matchLabels:
      app: mbookmytrip
  template:
    metadata:
      labels:
        app: mbookmytrip
        env: test-mbookmytrip
    spec:
      serviceAccountName: test-mbookmytrip-sa
      containers:
        - name: mbookmytrip
          image: 251335054837.dkr.ecr.ap-south-1.amazonaws.com/mbookmytrip:<latest>
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 8080
              name: api
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: test-mbookmytrip-application-config
