kubernetes/test-mbookmytrip/03-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: test-mbookmytrip
    app: mbookmytrip
    layer: frontend
  name: test-mbookmytrip-service
  namespace: test-mbookmytrip
spec:
  type: NodePort
  selector:
    app: mbookmytrip
  ports:
    - name: api
      port: 8888
      targetPort: 8888
