kubernetes/test-mbookmytrip/00-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-mbookmytrip-ingress
  namespace: test-mbookmytrip
  labels:
    env: test-mbookmytrip
    app: mbookmytrip
    layer: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test-mbookmytrip.cloudcortex.in
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: test-mbookmytrip-service
                port:
                  number: 8080
